                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 06-05-2006 fixed: New loglevels were slightly out (meant you always had full debug logging.)
 - 06-05-2006 changed: Cleaned up more thumb related code (Picture thumbs are now in UserData/Thumbnails/Pictures/0..F/)
 - 05-05-2006 fixed: hopefully increased my programs speed a bit.
 - 05-05-2006 added: "Safe mode" key combination (WHITE + Y) on startup to invoke the fatal error handler (gives FTP access).  Thanks to Bizzeh.
 - 05-05-2006 changed: Cleaned up the video assigning code.  Video thumbnails are now stored in UserData/Thumbnails/Video.
 - 04-05-2006 changed: Cleaned up the IMDb thumb code a little.  GetThumb from the Movie Information page now allows users to select between the IMDb thumb and their local thumbs.
 - 04-05-2006 fixed: Aspect ratio of images in python were defaulted to keep, rather than stretch.
 - 04-05-2006 added: Direct3d Setviewport export for dlls.
 - 04-05-2006 changed: Thumbs in My Videos are set via a background loader.
 - 04-05-2006 changed: IMDb thumbs are now cached in the usual method (no need for the separate imdb folder).  Will require rescanning.
 - 04-05-2006 changed: Removed <logpath> tag.  By default it logs in the XBMC folder, unless it's running off DVD, where it logs in TDATA. UserData is also moved to TDATA if running off DVD.
 - 04-05-2006 changed: Moved albums/ and thumbs/ folders to UserData/ folder:
               albums/*.db -> UserData/Database/*.db
               albums/cddb -> UserData/Database/CDDB
               albums/imdb -> UserData/Database/IMDb
               albums/thumbs -> UserData/Thumbnails/Music
               albums/playlist -> UserData/Playlists